syntax = "proto3";

                 package verificationCode;
service VerificationCodeService {
 rpc createVerificationCode (VerificationCodeCreateInput) returns (VerificationCode) {}
rpc verificationCodes (findManyParams) returns (stream VerificationCode) {}
rpc verificationCode (VerificationCodeWhereUniqueInput) returns (VerificationCode) {}
rpc updateVerificationCode (VerificationCodeUpdateInput) returns (VerificationCode) {}
rpc deleteVerificationCode (VerificationCodeWhereUniqueInput) returns (VerificationCode) {} 
 }
message VerificationCodeCreateInput {
int32 attempts = 1;
string code = 2;
string createdAt = 3;
string expiresAt = 4;
string id = 5;
int32 maxAttempts = 6;
string messageId = 7;
string metadata = 8;
string phone = 9;
string providerId = 10;
repeated string status = 11;
string updatedAt = 12;
repeated string verification_type = 13;
string verifiedAt = 14;
};
message VerificationCode {
int32 attempts = 1;
string code = 2;
string createdAt = 3;
string expiresAt = 4;
string id = 5;
int32 maxAttempts = 6;
string messageId = 7;
string metadata = 8;
string phone = 9;
string providerId = 10;
repeated string status = 11;
string updatedAt = 12;
repeated string verification_type = 13;
string verifiedAt = 14;
};
message VerificationCodeWhereUniqueInput {
int32 attempts = 1;
string code = 2;
string createdAt = 3;
string expiresAt = 4;
string id = 5;
int32 maxAttempts = 6;
string messageId = 7;
string metadata = 8;
string phone = 9;
string providerId = 10;
repeated string status = 11;
string updatedAt = 12;
repeated string verification_type = 13;
string verifiedAt = 14;
};
message VerificationCodeUpdateInput {
int32 attempts = 1;
string code = 2;
string createdAt = 3;
string expiresAt = 4;
string id = 5;
int32 maxAttempts = 6;
string messageId = 7;
string metadata = 8;
string phone = 9;
string providerId = 10;
repeated string status = 11;
string updatedAt = 12;
repeated string verification_type = 13;
string verifiedAt = 14;
};
message findManyParams {

};